--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,9 @@
           </div>
           <div class="item--four-fifths  medium__item--one-whole smallScreen--hide">
               <ul>
+                  {% if page.handle == 'overwatch' %}
+                    <li><i class="js-volume material-icons is-on">volume_up</i></li>
+                  {% endif %}
                   <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
                   <li><a href="https://twitter.com/messages/compose?recipient_id=3592322542" target="_blank">Contact</a></li>
               </ul>
