--- a/_includes/css/dev/_hearthstone.scss
+++ b/_includes/css/dev/_hearthstone.scss
@@ -80,28 +80,28 @@
       img.img-back:hover{
         -webkit-filter: drop-shadow(0px 0px 15px #fff );
         filter: drop-shadow(0px 0px 15px #fff);
-        transform: scale(1.1) rotateY(-180deg);
+        transform: scale(1.1);
       }
     }
     .RARE {
       img.img-back:hover{
         -webkit-filter: drop-shadow(0px 0px 15px #0070ff );
         filter: drop-shadow(0px 0px 15px #0070ff);
-        transform: scale(1.1) rotateY(-180deg);
+        transform: scale(1.1);
       }
     }
     .EPIC {
       img.img-back:hover{
         -webkit-filter: drop-shadow(0px 0px 15px #B048F8 );
         filter: drop-shadow(0px 0px 15px #B048F8);
-        transform: scale(1.1) rotateY(-180deg);
+        transform: scale(1.1);
       }
     }
     .LEGENDARY {
       img.img-back:hover{
         -webkit-filter: drop-shadow(0px 0px 15px #ff8000 );
         filter: drop-shadow(0px 0px 15px #ff8000);
-        transform: scale(1.1) rotateY(-180deg);
+        transform: scale(1.1);
       }
     }
   }
