Fixed font rendering

--- a/_includes/css/dev/_overwatch.scss
+++ b/_includes/css/dev/_overwatch.scss
@@ -1,7 +1,7 @@
 /*============================================================================
   Overwatch
 ==============================================================================*/
-.overwatch {
+.overwatch, .changelog {
   .btn {
     background: $ow;
     padding: 10px 20px;
