--- a/_includes/css/dev/_hearthstone.scss
+++ b/_includes/css/dev/_hearthstone.scss
@@ -48,6 +48,9 @@
     &.wotog {
       background-image: url('../images/packwotog.png');
     }
+    &.kac {
+      background-image: url('../images/packkac.png');
+    }
   }
 }
 
