--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -13,6 +13,7 @@ title: hearthstone
       <button href="#" class="btn msog" data-pack="GANGS"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
       <button href="#" class="btn ungoro" data-pack="UNGORO"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
       <button href="#" class="btn kotft" data-pack="ICECROWN"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
+      <button href="#" class="btn kac" data-pack="LOOTAPALOOZA"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
     </div>
   </div>
   <div class="item--one-whole">
