--- a/_includes/css/dev/_overwatch.scss
+++ b/_includes/css/dev/_overwatch.scss
@@ -228,7 +228,7 @@
   background-repeat: no-repeat;
   background-position: 95% 3%;
   background-size: 12%;
-  &.WINTER_WONDERLAND_2016 {
+  &.WINTER_WONDERLAND {
     background-image: url(../images/events/winter.svg);
   }
 
