--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -159,6 +159,15 @@ header {
   }
 }
 
+.btn-wrap {
+  .slick-prev, .slick-next {
+    &:before {
+      color: #131313;
+    }
+  }
+}
+
+
 /*============================================================================
   Footer
 ==============================================================================*/
