--- a/_includes/css/dev/_hearthstone.scss
+++ b/_includes/css/dev/_hearthstone.scss
@@ -11,19 +11,20 @@
 
 .hearthstone {
   .btn {
-    display: inline-block;
+    display: block;
     margin: 5px 10px;
     background-image: url('../images/pack.png');
     background-color: transparent;
     background-size: cover;
     background-repeat: no-repeat;
-    height: calc(216px / 4);
-    width: calc(160px / 4);
+    //height: calc(216px / 4);
+    //width: calc(160px / 4);
     transition: ease-in-out 0.5s all;
+    cursor: pointer;
     border: 0;
     @include at-query($min, $large) {
-      height: calc(216px / 2);
-      width: calc(160px / 2);
+      //height: calc(216px / 2);
+      //width: calc(160px / 2);
       margin: 10px 20px;
     }
     &:hover {
@@ -65,11 +66,11 @@
   justify-content: center;
   flex-wrap: wrap;
   .flip {
-    width: calc(33.333% - 20px);
-    padding: 0 10px;
+    width: calc(33.333% - 0px);
+    padding: 0;
     display: inline-block;
     @include at-query($min, $large) {
-      width: calc(20% - 20px);
+      width: calc(20% - 0px);
     }
     img {
       width: 100%;
