--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -6,14 +6,14 @@ title: hearthstone
 <div class="itty">
   <div class="item--one-whole">
     <div class="btn-wrap">
-      <button href="#" class="btn" data-pack="EXPERT1"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn gvg" data-pack="GVG"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn tgt" data-pack="TGT"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn wotog" data-pack="OG"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn msog" data-pack="GANGS"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn ungoro" data-pack="UNGORO"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn kotft" data-pack="ICECROWN"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
-      <button href="#" class="btn kac" data-pack="LOOTAPALOOZA"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');"></button>
+      <img alt="Classic pack" href="#" src="{{ "images/pack.png" | relative_url }}" class="btn" data-pack="EXPERT1"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Kobolds and catacombs pack" href="#" src="{{ "images/packkac.png" | relative_url }}" class="btn kac" data-pack="LOOTAPALOOZA"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Knight of the frozen throne pack" href="#" src="{{ "images/packkotft.png" | relative_url }}" class="btn kotft" data-pack="ICECROWN"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Un'goro crater pack" href="#" src="{{ "images/packungoro.png" | relative_url }}" class="btn ungoro" data-pack="UNGORO"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Mean streets of gadgetzan pack" href="#" src="{{ "images/packmsog.png" | relative_url }}" class="btn msog" data-pack="GANGS"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Wrath of the old gods pack" href="#" src="{{ "images/packwotog.png" | relative_url }}" class="btn wotog" data-pack="OG"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="The grand tournament pack" href="#" src="{{ "images/packtgt.png" | relative_url }}" class="btn tgt" data-pack="TGT"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      <img alt="Goblins vs Gnomes pack" href="#" src="{{ "images/packgvg.png" | relative_url }}" class="btn gvg" data-pack="GVG"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
     </div>
   </div>
   <div class="item--one-whole">
