--- a/_includes/css/dev/_hearthstone.scss
+++ b/_includes/css/dev/_hearthstone.scss
@@ -55,6 +55,18 @@
   }
 }
 
+.scoreText {
+  padding-top: 40px;
+}
+
+.score {
+  background: rgba(0,0,0,0.1);
+  border-radius: 30px;
+  padding: 10px 20px;
+  color: #777;
+  display: none;
+}
+
 
 /* Cards
 -------------------------------------------------*/
