--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -19,4 +19,7 @@ title: hearthstone
   <div class="item--one-whole">
     <div class="list"></div>
   </div>
+  <div class="item--one-whole text-align--center scoreText">
+    <span class="score">Pack score: <span class="value">0</span></span>
+  </div>
 </div>
