--- a/_includes/css/dev/_itty.scss
+++ b/_includes/css/dev/_itty.scss
@@ -101,8 +101,15 @@ $max: max-width;
 
 }
 
+.smallScreen--show {
+  display: none !important;
+  @media screen and (max-width: 768px) {
+    display: block !important;
+  }
+}
+
 .smallScreen--hide {
   @media screen and (max-width: 768px) {
-    display: none;
+    display: none !important;
   }
 }
