--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="description" content="LootJunkie is a loot box simulator where you can open loot boxes for free!" />
     <meta name="keywords" content="overwatch,over watch,overwatch loot,overwatch loot box,simulator,overwatch simulator,overwatch loot simulator,overwatch loot box simulator,loot junkie,lootjunkie,loot junky, hearthstone,over watch,hearthstone loot,hearthstone loot box,simulator,hearthstone simulator,hearthstone loot simulator,hearthstone loot box simulator" />
     <meta name="robots" content="index,follows" />
+    <meta name="trafficjunky-site-verification" content="n82t1nsnt" />
     <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relative_url }}">
     <title>{{ page.title }}</title>
     <link href="{{ "css/main.css" | relative_url }}" rel="stylesheet">
