--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,6 @@
     <meta name="description" content="LootJunkie is a loot box simulator where you can open loot boxes for free!" />
     <meta name="keywords" content="overwatch,over watch,overwatch loot,overwatch loot box,simulator,overwatch simulator,overwatch loot simulator,overwatch loot box simulator,loot junkie,lootjunkie,loot junky, hearthstone,over watch,hearthstone loot,hearthstone loot box,simulator,hearthstone simulator,hearthstone loot simulator,hearthstone loot box simulator" />
     <meta name="robots" content="index,follows" />
-    <meta name="trafficjunky-site-verification" content="n82t1nsnt" />
     <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relative_url }}">
     <title>{{ page.title }}</title>
     <link href="{{ "css/main.css" | relative_url }}" rel="stylesheet">
@@ -23,6 +22,13 @@
       ga('create', 'UA-62106034-1', 'auto');
       ga('send', 'pageview');
 
+    </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1180080894503133",
+        enable_page_level_ads: true
+      });
     </script>
 
   </head>
