--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,14 @@
 
     <section class="news shadow {{ page.handle }}">
       <div class="container text-align--center">
-        <i class="material-icons">message</i>
-        <div id="alert"></div>
+        <i class="material-icons">favorite</i>
+        <div>
+          <ul>
+            <li>
+              <p>Like us? Please <a href="https://buymeacoff.ee/lootjunkie" title="donate" target="_blank">consider donating</a> to keep the site running</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
