--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
     <section class="news shadow {{ page.handle }}">
       <div class="container text-align--center">
         <i class="material-icons">favorite</i>
-        <div>
+        <div id="alert">
           <ul>
             <li>
               <p>Like us? Please <a href="https://buymeacoff.ee/lootjunkie" title="donate" target="_blank">consider donating</a> to keep the site running</p>
