--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
         <div id="alert">
           <ul>
             <li>
-              <p>Like us? Please <a href="https://buymeacoff.ee/lootjunkie" title="donate" target="_blank">consider donating</a> to keep the site running</p>
+              <p><a href="https://buymeacoff.ee/lootjunkie" title="donate" target="_blank">Like us? Please consider donating to keep the site running</a></p>
             </li>
           </ul>
         </div>
