Year of the dog update

--- a/_includes/css/dev/_overwatch.scss
+++ b/_includes/css/dev/_overwatch.scss
@@ -240,7 +240,7 @@
     background-image: url(../images/events/halloween.svg);
   }
 
-  &.YEAR_OF_THE_ROOSTER_2017 {
+  &.LUNAR_NEW_YEAR {
     background-image: url(../images/events/rooster.svg);
   }
 
