--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ title: index
     <li><a title="Summer Games" id="summer2016" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-summer.svg" alt="Summer Games 2016"></a></li>
     <li><a title="Halloween Terror" id="halloween" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-halloween.svg" alt="Halloween Terror"></a></li>
     <li><a title="Winter Wonderland" id="winter" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-winter.svg" alt="Winter Wonderland"></a></li>
-    <li><a title="Year of the Rooster" id="rooster" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-rooster.svg" alt="Year of the Rooster"></a></li>
+    <li><a title="Year of the Dog" id="rooster" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-rooster.svg" alt="Year of the Rooster"></a></li>
     <li><a title="Anniversary" id="anniversary" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-anniversary.svg" alt="Anniversary"></a></li>
     <li><a title="Uprising" id="uprising" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-uprising.svg" alt="Uprising"></a></li>
   </ul>
