Minor visual adjustments and removed old stuff

--- a/_includes/css/dev/_overwatch.scss
+++ b/_includes/css/dev/_overwatch.scss
@@ -10,8 +10,7 @@
     font-weight: 700;
     display: block;
     border: 0px;
-    border-top: 1px solid lighten($ow, 10%);
-    border-bottom: 1px solid darken($ow, 10%);
+    box-shadow: 0 1px 1px rgba(27,31,35,0.1);
     color: white;
     transition: ease-in-out 0.5s all;
     cursor: pointer;
@@ -152,6 +151,7 @@
     margin: 3px 0px;
     text-transform: capitalize;
     color: white;
+    box-shadow: 0 1px 1px rgba(27,31,35,0.1);
     &.common {
       color: #222;
     }
@@ -180,10 +180,11 @@
   background-color: white;
   box-sizing: border-box;
   @include at-query($min, $large) {
-    p {
-      border-top: 1px solid #fff;
-      border-bottom: 1px solid darken(#fff, 20%);
-      background-color: rgba(255,255,255,0.8);
+    span {
+      background-color: rgba(255,255,255,0.25);
+      p {
+        background-color: #fff;
+      }
    }
   }
 }
@@ -192,10 +193,11 @@
   background-color: #0070ff;
   box-sizing: border-box;
   @include at-query($min, $large) {
-    p {
-      border-top: 1px solid #0070ff;
-      border-bottom: 1px solid darken(#0070ff, 20%);
-      background-color: rgba(0,112,255,0.8);
+    span {
+      background-color: rgba(0,112,255,0.25);
+      p {
+        background-color: #0070ff;
+      }
     }
   }
 }
@@ -203,10 +205,11 @@
   background-color: #B048F8;
   box-sizing: border-box;
   @include at-query($min, $large) {
-    p {
-      border-top: 1px solid #B048F8;
-      border-bottom: 1px solid darken(#B048F8, 20%);
-      background-color: rgba(176,72,248,0.8);
+    span {
+      background-color: rgba(176,72,248,0.25);
+      p {
+        background-color: #B048F8;
+      }
     }
   }
 }
@@ -214,10 +217,11 @@
   background-color: #ff8000;
   box-sizing: border-box;
   @include at-query($min, $large) {
-    p {
-      border-top: 1px solid #ff8000;
-      border-bottom: 1px solid darken(#ff8000, 20%);
-      background-color: rgba(255,128,0,0.8);
+    span {
+      background-color: rgba(255,128,0,0.25);
+      p {
+        background-color: #ff8000;
+      }
     }
   }
 }
