--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -22,6 +22,11 @@ $hs: #2797e8;
 .text-align--center { text-align: center; }
 .text-align--right { text-align: right; }
 
+a {
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip: ink;
+}
+
 body {
   font-family: $font-stack;
   font-size: 16px;
@@ -159,6 +164,19 @@ header {
   }
 }
 
+/*============================================================================
+  Switch buttons
+==============================================================================*/
+
+.switchto {
+  top: 66%;
+  position: absolute;
+  right: 0;
+  display: none;
+  @include at-query($min, $medium) {
+    display: block;
+  }
+}
 
 
 /*============================================================================
@@ -194,7 +212,9 @@ header {
   position: relative;
   margin: 30px 0;
   font-size: 80%;
+  display: block;
   @include at-query($min, $large) {
+    display: none;
     position: absolute;
     margin: 0;
     bottom: 2%;
