--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -193,6 +193,18 @@ header {
   }
 }
 
+/*============================================================================
+  Affiliate stuff
+==============================================================================*/
+
+.aff-bar {
+  width: 100%;
+  margin: 20px 0;
+  img {
+    display: block;
+    margin: 0px auto;
+  }
+}
 
 /*============================================================================
   Footer
