--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,14 @@
     </section>
 
     <div class="main container">
+      <div class="aff-bar">
+        <a class="smallScreen--hide" href="http://www.anrdoezrs.net/k1102lnwtnvAJEIBBHBACEDDGEEI" target="_blank">
+          <img src="http://www.awltovhc.com/ta122snrflj4D8C55B546877A88C" alt="" border="0"/>
+        </a>
+        <a class="smallScreen--show" href="http://www.kqzyfj.com/click-8370060-13233925" target="_top">
+          <img src="http://www.ftjcfx.com/image-8370060-13233925" width="300" height="50" alt="" border="0"/>
+        </a>
+      </div>
       <main role="main">
         {{content}}
       </main>
