--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -169,6 +169,7 @@ header {
 ==============================================================================*/
 
 .legal {
+  padding: 0 10px;
   p,
   li,
   h1,
