--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -243,6 +243,15 @@ header {
   margin: 30px 0;
   font-size: 80%;
   display: block;
+  ul {
+    list-style: none;
+    padding-left: 0;
+    padding-top: 10px;
+    li {
+      display: inline;
+      padding: 0 5px;
+    }
+  }
   @include at-query($min, $large) {
     display: none;
     position: absolute;
