About fix and font fix

--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -2,7 +2,7 @@
   Variables
 ==============================================================================*/
 
-$font-stack: 'Ubuntu', sans-serif;
+$font-stack: 'Montserrat', sans-serif;
 $ow: #f99e1a;
 $hs: #2797e8;
 
