--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,8 @@ title: index
   <img id="box" src="images/loot-box.png" alt="Loot Box" onclick="ga('send', 'event', 'Generate box', 'Click', 'Open loot box');">
   <ul id="crate"></ul>
 </div>
-<button class="generate btn shadow yellow" onclick="ga('send', 'event', 'Generate box', 'Click', 'Open loot box');">Open Loot Box</button><br>
+<button class="generate btn shadow yellow" onclick="ga('send', 'event', 'Generate box', 'Click', 'Open loot box');">Open Loot Box</button>
+<div class="crateScore"><p>Score: <span id="value">0</span></p></div>
 <div class="box-type">
   <ul class="horizontal-menu">
     <li><a title="Standard" id="standard" href="javascript: void(0)" class="active"><img class="lootbtn" src="images/events/btn-ow.svg" alt="Standard"></a></li>
