--- a/_includes/css/dev/style.scss
+++ b/_includes/css/dev/style.scss
@@ -33,7 +33,7 @@ body {
   font-size: 16px;
   background-color: #242a2f;
   -webkit-font-smoothing: antialiased;
-  color: #131313;
+  color: #fff;
 }
 
 a, a:visited {
