Fixed brigitte class name

--- a/_includes/css/dev/_overwatch.scss
+++ b/_includes/css/dev/_overwatch.scss
@@ -302,7 +302,7 @@
   }
 }
 
-#crate li.brigette {
+#crate li.brigitte {
   background-image: url(../images/mobile/brigette.png);
   background-repeat: no-repeat;
   background-position: right;
