--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index,follows" />
     <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relative_url }}">
     <title>{{ page.title }}</title>
-    <link href="{{ "css/main.css" | relative_url }}" rel="stylesheet">
+    <link href="{{ "assets/style.css" | relative_url }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
