Added missing animate library

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -12,6 +12,7 @@ $hs: #2797e8;
 /*============================================================================
   Includes
 ==============================================================================*/
+@import 'animate';
 @import 'grids';
 @import 'emoji';
 @import 'normalize';
