--- a/_sass/_overwatch.scss
+++ b/_sass/_overwatch.scss
@@ -216,11 +216,11 @@
     background-image: url(../images/events/rooster.svg);
   }
 
-  &.ANNIVERSARY_2017 {
+  &.ANNIVERSARY {
     background-image: url(../images/events/anniversary.svg);
   }
 
-  &.UPRISING_2017 {
+  &.UPRISING {
     background-image: url(../images/events/uprising.svg);
   }
 }
