--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -10,6 +10,9 @@ title: hearthstone
         <img title="Classic pack" href="#" src="{{ "images/pack.png" | relative_url }}" class="btn" data-pack="EXPERT1"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
     </div>
     <div>
+        <img title="Boomsday" href="#" src="{{ "images/packboomsday.png" | relative_url }}" class="btn tww" data-pack="BOOMSDAY"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+    </div>
+    <div>
       <img title="The Witchwood" href="#" src="{{ "images/packtww.png" | relative_url }}" class="btn tww" data-pack="GILNEAS"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
     </div>
     <div>
